# jquantlib

./: .gitignore  CLAUDE.md  README.md  build.sbt
.claude/: settings.local.json
docs/migration/: followups.md  phase1-carveouts.md  phase1-completion.md  phase1-design.md  phase1-plan.md  phase2a-audit.md  phase2a-carveouts.md  phase2a-completion.md  phase2a-design.md  phase2a-plan.md  phase2a-progress.md  phase2b-completion.md  phase2b-design.md  phase2b-plan.md  phase2b-progress.md  phase2c-completion.md  phase2c-design.md  phase2c-plan.md  stub-allowlist.json  stub-inventory.json  worklist.md
jquantlib/: .classpath  .project  jquantlib-clean-install.launch  pom.xml
jquantlib-contrib/: .project  jquantlib-contrib-clean-install.launch  pom.xml
jquantlib-helpers/: .classpath  .project  jquantlib-helpers-clean-install.launch  pom.xml
jquantlib-parent/: .project  pom.xml
jquantlib-samples/: .classpath  .project  pom.xml
jquantlib-samples/src/main/java/org/jquantlib/samples/: SobolChartSample.java
jquantlib/src/main/java/org/jquantlib/: QL.java
jquantlib/src/main/java/org/jquantlib/cashflow/: AverageBMACoupon.java  CappedFlooredCoupon.java  CappedFlooredIborCoupon.java  CashFlows.java  FixedRateLeg.java  IborCoupon.java
jquantlib/src/main/java/org/jquantlib/currencies/: America.java  ExchangeRateManager.java  Money.java
jquantlib/src/main/java/org/jquantlib/daycounters/: ActualActual.java  DayCounter.java
jquantlib/src/main/java/org/jquantlib/indexes/: Index.java  InflationIndex.java  InterestRateIndex.java  YoYInflationIndex.java  ZeroInflationIndex.java
jquantlib/src/main/java/org/jquantlib/instruments/: Bond.java  CapFloor.java  DiscreteAveragingAsianOption.java  MakeVanillaSwap.java  Swap.java  Swaption.java
jquantlib/src/main/java/org/jquantlib/math/: AbstractSolver1D.java
jquantlib/src/main/java/org/jquantlib/model/: CalibratedModel.java  CalibrationHelper.java  Parameter.java  TermStructureConsistentModel.java
migration-harness/: README.md  generate-references.sh  setup.sh  verify-harness.sh
migration-harness/cpp/: CMakeLists.txt
migration-harness/cpp/probes/: _smoke_test_probe.cpp  common.hpp
migration-harness/cpp/probes/currencies/: exchangerate_manager_probe.cpp
migration-harness/cpp/probes/math/distributions/: noncentral_chi_squared_probe.cpp
migration-harness/cpp/probes/math/interpolations/: sabr_interpolation_probe.cpp
migration-harness/cpp/probes/math/optimization/: endcriteria_probe.cpp  leastsquare_probe.cpp  levenbergmarquardt_probe.cpp  linesearch_probe.cpp  minpack_qrfac_probe.cpp  minpack_qrsolv_probe.cpp  projection_probe.cpp  spherecylinder_probe.cpp
migration-harness/cpp/probes/model/shortrate/: blackkarasinski_tree_probe.cpp  coxingersollross_calibration_probe.cpp  hullwhite_calibration_probe.cpp  vasicek_calibration_probe.cpp
migration-harness/cpp/probes/patterns/: handle_probe.cpp  observable_probe.cpp
migration-harness/cpp/probes/processes/: hestonprocess_qe_probe.cpp
migration-harness/references/: _smoke_test.json
migration-harness/references/currencies/: exchangerate_manager.json
migration-harness/references/math/distributions/: noncentral_chi_squared.json
migration-harness/references/math/interpolations/: sabr_interpolation.json
migration-harness/references/math/optimization/: endcriteria.json  leastsquare.json  levenbergmarquardt.json  linesearch.json  minpack_qrfac.json  minpack_qrsolv.json  projection.json  spherecylinder.json
migration-harness/references/model/shortrate/: blackkarasinski_tree.json  coxingersollross_calibration.json  hullwhite_calibration.json  vasicek_calibration.json
migration-harness/references/patterns/: handle.json  observable.json
migration-harness/references/processes/: hestonprocess_qe.json
tools/stub-scanner/: README.md  scan_stubs.py
(+134 files in other folders)
